--- a/src/components/milligram.css
+++ b/src/components/milligram.css
@@ -225,6 +225,7 @@
    height: 3.8rem;
    padding: .6rem 1.0rem;
    width: 100%;
+   color: #606c76;
  }
  
  input[type='email']:focus,
@@ -528,8 +529,9 @@
  th {
    border: 1px solid black;
    text-align: left;
-   width: 12px;
-   height: 12px;
+   /*width: 12px;
+   height: 12px;*/
+   background-color: white;
  }
  
  td:first-child,
